AC-517 fixes `color-contrast` ignores across platform

--- a/cms/static/sass/elements/_forms.scss
+++ b/cms/static/sass/elements/_forms.scss
@@ -249,7 +249,7 @@ form {
         &:focus {
 
           + .tip {
-            color: $gray;
+            color: $gray-d1;
           }
         }
       }
